# WebSocket-TestClient

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
src/: cli.rs  main.rs  messages.rs
src/ChatSurfer/: messages.rs
src/edge_view/: client.rs
src/service/: error.rs
