[package]
name = "WebSocket-TestClient"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1"
strum_macros = "0.26"
tracing = "0.1.4"
tracing-subscriber = "0.3.18"
tungstenite = "0.16.0"
url = "2.2.2"
uuid = { version = "1.10.0", features = ["serde", "v4"] }